fixed broweser incompaitailbity issue with intro animation and cut gap between intro line

--- a/public/styles/greeting_container.css
+++ b/public/styles/greeting_container.css
@@ -18,7 +18,6 @@
   align-items: center;
   flex-direction: column;
   display: flex;
-  height: 60%;
   justify-content: space-around;
   padding-top: 40px;
   width: 100%;
